# SuperTurtle

./: .env.example  .gitattributes  .gitignore  .tunnel-url  AGENTS.md  CLAUDE.md  CLI_SPEC.md  Makefile  README.md  claude-meta  docker-compose.yml  main.py  orchestrator-ctl
.tmp/: test-alpha-haiku.txt  test-beta-poem.txt  test-gamma-limerick.txt
api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
api/agnt_api/: __init__.py  config.py  db.py  main.py  storage.py
api/agnt_api/api/: deps.py  errors.py  router.py
api/agnt_api/api/routes/: agents.py  executor_jobs.py  jobs.py
api/agnt_api/models/: __init__.py  agent.py  enums.py  job.py  job_result.py
api/agnt_api/schemas/: __init__.py  agents.py  jobs.py
api/alembic/: env.py
api/alembic/versions/: 20260220_0001_init_job_contract.py
api/tests/: conftest.py  test_agents.py  test_executor_jobs.py  test_health.py  test_job_lifecycle.py  test_jobs.py  test_seed.py  test_storage.py
books/: animal-reef.md  shell-and-sensibility.md  shell-protocol.md  the-metamorphosis-of-shells.md  the-old-turtle-and-the-sea.md  the-shell-beyond-the-stars.md  the-shellmarillion.md  the-tell-tale-shell.md
candle-landing/: index.html
claude-telegram-bot/: README.md  package.json
cli/: README.md  go.mod
executors/: EXECUTOR_PRD.md
meta/: META_SHARED.md
npm/: README.md  package.json
orchestrator/: README.md
pip/: .gitignore  README.md  pyproject.toml
pip/agnt_cli/: __init__.py  install.py  launcher.py  platform.py
pip/tests/: test_install.py  test_launcher.py  test_platform.py
reviews/: claude-review.md  codex-review.md
scripts/: README.md  e2e_executors.sh  e2e_system.sh  handoff.py  handoff.sh  integration.sh
snake-game/: CLAUDE.md  package-lock.json  package.json
super_turtle/: CHANGELOG.md  README.md  package.json  setup
super_turtle/orchestrator/: README.md  __main__.py  ctl  pyproject.toml
super_turtle/orchestrator/agnt_orchestrator/: __init__.py  __main__.py  agents.py
super_turtle/orchestrator/claude-md-guard/: README.md  create-rules-prompt.sh  validate.sh
super_turtle/orchestrator/claude-md-guard/tests/: run.sh
super_turtle/orchestrator/tests/: test_main.py
super_turtle/subturtle/: README.md  __main__.py  browser-screenshot.sh  ctl  loops.py  prompts.py  pyproject.toml  start-tunnel.sh  statefile.py
super_turtle/subturtle/claude-md-guard/: README.md  config.sh  create-rules-prompt.sh
super_turtle/subturtle/claude-md-guard/tests/fixtures/: few-backlog.md  missing-current.md  multiple-errors.md  too-long.md  valid.md
super_turtle/subturtle/lib/: commands.sh
super_turtle/subturtle/subturtle_loop/: __init__.py  __main__.py  agents.py
super_turtle/subturtle/tests/: smoke_spawn_status.sh  test_ctl_integration.sh  test_main.py  test_subturtle_main.py
texting-page/: .gitignore  index.html  (+3 more)
(+627 files in other folders)
