[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agnt"
version = "0.1.0"
description = "pip wrapper for the agnt Go CLI binary"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
agnt = "agnt_cli.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agnt_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
