[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subturtle"
version = "0.1.0"
description = "SubTurtle — autonomous coding loop (plan, groom, execute, review)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
]

[project.scripts]
subturtle-run = "subturtle_loop.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["subturtle_loop*"]
